[package]
name = "halide-build"
version = "0.6.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2021"
license = "ISC"
repository = "https://github.com/zshipko/halide-build"
documentation = "https://docs.rs/halide-build"
readme = "README.md"
description = "A library/utility for building Halide kernels"

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "halide"
required-features = ["bin"]

[dependencies]
clap = {version = "3", optional = true, features=["env"]}

[features]
default = []
bin = ["clap"]
